<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="Home" />

    <item
        android:id="@+id/placeholder"
        android:title=""
        android:enabled="false" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_account"
        android:title="Profil" />

</menu>
